--- a/NativeUI_2/vue-project/package.json
+++ b/NativeUI_2/vue-project/package.json
@@ -10,6 +10,7 @@
     "pinia": "^2.0.16",
     "unplugin-vue-components": "^0.21.2",
     "vue": "^3.2.37",
+    "vue-next-breakpoints": "^1.0.1",
     "vue-router": "^4.1.2"
   },
   "devDependencies": {
@@ -21,6 +22,7 @@
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-vue": "^9.3.0",
     "naive-ui": "^2.32.0",
+    "sass": "^1.54.0",
     "unplugin-auto-import": "^0.10.2",
     "vfonts": "^0.0.3",
     "vite": "^3.0.1"
