弄好了modal跟會員後台router  改了管理者後台
qq

--- a/NativeUI_2/vue-project/package.json
+++ b/NativeUI_2/vue-project/package.json
@@ -7,6 +7,7 @@
     "preview": "vite preview --port 4173"
   },
   "dependencies": {
+    "@vueuse/core": "^9.1.0",
     "pinia": "^2.0.16",
     "unplugin-vue-components": "^0.21.2",
     "vue": "^3.2.37",
