--- a/NativeUI_2/back/package.json
+++ b/NativeUI_2/back/package.json
@@ -20,10 +20,14 @@
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "cloudinary": "^1.30.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.5.0",
+    "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "validator": "^13.7.0"
   }
 }
