--- a/NativeUI_2/vue-project/package.json
+++ b/NativeUI_2/vue-project/package.json
@@ -8,7 +8,9 @@
   },
   "dependencies": {
     "@vueuse/core": "^9.1.0",
+    "axios": "^0.27.2",
     "pinia": "^2.0.16",
+    "sweetalert2": "^11.4.26",
     "unplugin-vue-components": "^0.21.2",
     "vue": "^3.2.37",
     "vue-next-breakpoints": "^1.0.1",
