--- a/NativeUI_2/vue-project/package.json
+++ b/NativeUI_2/vue-project/package.json
@@ -10,6 +10,7 @@
     "@vueuse/core": "^9.1.0",
     "axios": "^0.27.2",
     "pinia": "^2.0.16",
+    "pinia-plugin-persistedstate": "^2.1.1",
     "sweetalert2": "^11.4.26",
     "unplugin-vue-components": "^0.21.2",
     "vue": "^3.2.37",
