--- a/NativeUI_2/vue-project/package.json
+++ b/NativeUI_2/vue-project/package.json
@@ -13,6 +13,7 @@
     "pinia-plugin-persistedstate": "^2.1.1",
     "sweetalert2": "^11.4.26",
     "unplugin-vue-components": "^0.21.2",
+    "validator": "^13.7.0",
     "vue": "^3.2.37",
     "vue-next-breakpoints": "^1.0.1",
     "vue-router": "^4.1.2"
